# evolutionary-watches

./: CMakeLists.txt  CODEOWNERS  README.md  main.cpp
algorithm/: CMakeLists.txt  CrossoverStrategy.cpp  CrossoverStrategy.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  MutationStrategy.cpp  MutationStrategy.h  SelectionStrategy.cpp  SelectionStrategy.h
core/: CMakeLists.txt  ICrossoverStrategy.h  IMutationStrategy.h  ISelectionStrategy.h  SystemObject.cpp  SystemObject.h
fileio/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  EvolutionHistory.cpp  EvolutionHistory.h  WatchFileIO.cpp  WatchFileIO.h
genome/: CMakeLists.txt  FitnessEvaluator.cpp  FitnessEvaluator.h  Watch.cpp  Watch.h  WatchComponent.cpp  WatchComponent.h
genome/components/: BalanceWheel.cpp  BalanceWheel.h  Gear.cpp  Gear.h  Hand.cpp  Hand.h  Jewel.cpp  Jewel.h  Spring.cpp  Spring.h
gui/: CMakeLists.txt  ComponentInspector.cpp  ComponentInspector.h  ControlPanel.cpp  ControlPanel.h  ControlPanel.ui  MainWindow.cpp  MainWindow.h  StatsPanel.cpp  StatsPanel.h  WatchCanvas.cpp  WatchCanvas.h  main_gui.cpp  main_gui.h  ui_ControlPanel.h
tests/: CMakeLists.txt  test_algorithm.cpp  test_fileio.cpp  test_genome.cpp
